2007-06-07  Emmanuel Dreyfus <manu@netbsd.org>
	From Paul Winder <Paul.Winder@tadpole.com>:
	* src/racoon/isakmp_cfg.c: Fix ignored INTERNAL_DNS4_LIST

2007-06-06  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/handler.c: ignore obsolete lifebyte when validating
	  reloaded configuration.
	From Jianli Liu <jlliu@nortel.com>:
	* src/racoon/session.c: speeds up interfaces update when they changed.
	From Rong-En Fan <rafan@freebsd.org>
	* src/racoon/{var.h|eaytest.c}: fixed compilation with gcc 4.2

2007-05-31  Emmanuel Dreyfus <manu@netbsd.org>
	From Joy Latten <latten@austin.ibm.com>
	* src/racoon/{main.c|policy.h|security.c}: Fix file descriptor 
	  shortage when using labeled IPsec.

2007-05-30  Emmanuel Dreyfus <manu@netbsd.org>
	From Jianli Liu <jlliu@nortel.com>:
	* src/racoon/kmpstat.c: Use the specified socket path instead of 
	  the default location

2007-05-04  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/pfkey.c: Force the update of ph2 in pk_recvupdate()
	  if NAT_T support, to solve some port match problems with the
	  first IPSec SAs negociated as initiator.
	* src/racoon/isakmp_inf.c: added some debug for DELETE_SA process.
	* src/racoon/isakmp.c: added some debug in isakmp_chkph1there() to
	  track some port matching problems with NAT-T.
	* src/racoon/handler.c: added some debug in getph1byaddr() to
	  track some port matching problems with NAT-T.
	* src/racoon/handler.c: search a ph1 by address if iph2->ph1 is
	  NULL when validating the new config.

2007-04-04  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/oakley.c: dumps peer's ID and peer's certificate
	  subject /subjectaltname if they don't match.
	* src/racoon/ipsec_doi.c: checks proto_id in ipsecdoi_chkcmpids().

2007-03-26  Yvan Vanhullebus  <vanhu@netasq.com>
	* src/racoon/isakmp_inf.c: Store the DPD main scheduler in ph1
	  handler, to be able to cancel it when removing the handler, and
	  some minor cleanups in DPD code.

2007-03-23  Yvan Vanhullebus  <vanhu@netasq.com>